    * SPF verification is now enabled by default.
    * Add Policyd-2.0.x (code name "cluebringer") support on Ubuntu 11.10.
    * LDA (Dovecot deliver) will move SPAM to Junk folder by default.
    * Add missing INDEXes for Amavisd database: msgs.mail_id, (msgs.content,
      msgs.time_num), quarantine.mail_id.
      Thanks rjnena <rjnena@gmail>, David <dcharbonnier@gmail>.
    * Fixed:
      + Incorrect per-user realtime mailbox quota if loggin in with shadowAddress.
        OpenLDAP backend only. Thanks tmihalicek <tomislav.mihalicek @gmail>.
      + Incorrect per-user sieve_dir setting in Dovecot.
        Thanks cetex <oskar @cetex.se>.
    * Package update:
        + Roundcube webmail -> 0.6.0
        + phpMyAdmin -> 3.4.6

iRedMail-0.7.3:
    * Add enabledService=lda for newly created LDAP mail user. Required by
      Dovecot 2.x.
    * Works on CentOS 6.0, RHEL 6.x, Scientific Linux 6.x.
    * Mbox format mailbox is not supported anymore.
    * Add smtp-amavis_destination_recipient_limit=1 in Postfix for concurrency
      per-recipient limit. Thanks beez <jason@indo.net.id>.
    * Package update:
        + Roundcube webmail -> 0.5.4
        + iRedAdmin -> 0.1.6
        + phpMyAdmin -> 3.4.3.2

iRedMail-0.7.2:
    * Works on Ubuntu 11.04.
    * Enable LDAPS on FreeBSD by default. Thanks Markus Wyrsch <W-Chi@>.
    * Improvements:
        + Add alias domain support in postfix virtual_mailbox_domains (MySQL
          backend special).
    * Fixed:
        + Set 'ServerTokens' to 'ProductOnly' in Apache on Debian/Ubuntu.
          Thanks c33s@forum.
    * Package update:
        + Roundcube webmail -> 0.5.3
        + phpLDAPadmin -> 1.2.1.1
        + phpMyAdmin -> 3.4.1
        + iRedAPD -> 1.3.6. Fix two issues for MySQL backend.
        + iRedAdmin -> 0.1.5. Security fix edition.

iRedMail-0.7.1:
    * Fix incorrect icon path in awstats. Thanks <rannal@> for the feedback.
    * Use 2048 as default SSL key length. Thanks mike.f@forum <m.fresel@>.