@@ -7,6 +7,8 @@ iRedMail-0.7.4:
       msgs.time_num), quarantine.mail_id.
       Thanks rjnena <rjnena@gmail>, David <dcharbonnier@gmail>.
     * Fixed:
+      + Apache daemon user doesn't have permission to read Apache log files in
+        Awstats's cron job.
       + Incorrect per-user realtime mailbox quota if loggin in with shadowAddress.
         OpenLDAP backend only. Thanks tmihalicek <tomislav.mihalicek @gmail>.
       + Incorrect per-user sieve_dir setting in Dovecot.
